# taipy_financial_planning

./: .gitignore  README.md  dockerfile  pyproject.toml  test.ipynb
src/: config.toml  create_demo_scenarios.py  main.py
src/algorithms/: __init__.py  asset_editing_callbacks.py  calculate_evolution.py  calculate_statistics.py  callback_helpers.py  plot_confidence_bars.py  plot_kpis.py  run_scenario.py  scenario_creation_callbacks.py
src/callbacks/: __init__.py  asset_editing_callbacks.py  scenario_creation_callbacks.py
src/config/: __init__.py  config.py
src/context/: __init__.py  context.py
src/css/: main.css
src/data/: assets.json
src/pages/: __init__.py  asset_creation_page.py  compare_scenarios_page.py  page_helpers.py  root.py  scenario_comparison_page.py  scenario_creation_page.py
tests/: conftest.py  test_calculate-statistics.py  test_calculate_evolution.py  test_calculate_statistics.py
