[project]
name = "taipy-financial-planning"
version = "0.1.0"
description = "A demo Monte Carlo application with Taipy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "plotly>=6.4.0",
    "taipy>=4.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]