[project]
name = "taipy-financial-planning"
version = "0.1.0"
description = "A demo Monte Carlo application with Taipy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "plotly>=6.4.0",
    "taipy>=4.1.1",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
filterwarnings = [
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]
